--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 Django>=4.2.0
-Pillow>=10.0.0
-django-crispy-forms>=2.0
-crispy-bootstrap4>=2022.1 
+Pillow>=9.5.0
+reportlab>=4.0.4
+django-select2>=8.1.2 
