--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ Django>=4.2.0
 Pillow>=9.5.0
 reportlab>=4.0.4
 django-select2>=8.1.2
-requests>=2.31.0 
+requests>=2.31.0
+xhtml2pdf>=0.2.16
+markdown>=3.5.1
+python-dateutil>=2.8.2 
